--- a/style.css
+++ b/style.css
@@ -343,23 +343,22 @@ figure{
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
     font-size: 2.5rem;
     font-weight: 700;
 }
 .volly h2 {
-    margin-top: 3rem;
+    margin-top: 1rem;
     display: flex;
     font-size: 2rem;
 }
 
 .volly h3 {
-    margin-top: 2rem;
+    margin-top: 1rem;
     display: flex;
     font-size: 1.5rem;
 }
 .volly p {
-    margin-top: 1rem;
+    margin-top: .5rem;
     display: flex;
     font-size: 1rem;
     margin-bottom: 1rem;
