--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,7 @@ figure{
 
 
 .volly h1 {
-    margin-top: 1rem;
+    margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -337,7 +337,7 @@ figure{
     font-weight: 700;
 }
 .volly h2 {
-    margin-top: 1rem;
+    margin-top: 20px;
     display: flex;
     font-size: 3rem;
 }
@@ -352,6 +352,114 @@ figure{
     display: flex;
     font-size: 1.6rem;
     margin-bottom: 1rem;
+}
+.tampilan-volly img {
+    align-items: center;
+    border-radius: 5rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.5rem;
+    color: #fff;
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+    margin-top: 1.5rem;
+    margin-left: 3.5rem;
+}
+.tampilan-volly img:hover {
+    box-shadow: none;
+}
+
+.tampilan-volly h5 {
+    display: flex;
+    align-items: center;
+    float: right;
+    padding: 1rem 1.5rem;
+    background: var(--main-color);
+    border-radius: 5rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.5rem;
+    color: #fff;
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+    margin-top: 20px;
+    margin-right: 20px;
+    cursor: pointer;
+
+}
+.tampilan-volly h5:hover {
+    box-shadow: none;
+}
+  /* slideshow foto dokumentasi */
+  
+  .slider-doc{
+    width: 100%;
+    /* height: 500px; */
+    overflow: hidden;
+}
+
+figure{
+    position: relative;
+    left: 0;
+    width: 400%; /* width dikali slide */
+    animation: 10s slide infinite;
+}
+
+.slide-doc{
+    margin-top: 1rem;
+    position: relative;
+    width: 25%; /* width dibagi slide */
+    float: left;
+}
+
+.slide-doc img {
+    width: 100%;
+    /* height: 500px; */
+}
+
+@keyframes slide-doc{
+    0%{
+        left:0;
+    }
+    10%{
+        left:0;
+    }
+    20%{
+        left:-100%;
+    }
+    30%{
+        left:-100%;
+    }
+    40%{
+        left:-200%;
+    }
+    50%{
+        left:-200%;
+    }
+    55%{
+        left:-300%;
+    }
+    65%{
+        left:-300%;
+    }
+    66%{
+        left:-200%;
+    }
+    74%{
+        left:-200%;
+    }
+    75%{
+        left:-100%;
+    }
+    85%{
+        left:-100%;
+    }
+    90%{
+        left:0;
+    }
+    1000%{
+        left:0;
+    }
 }
 
   /* BREAKSPOINT */
