--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ span {
     overflow: hidden;
 }
 
-figure{
+.fig{
     position: relative;
     left: 0;
     width: 400%; /* width dikali slide */
@@ -336,8 +336,13 @@ figure{
     font-size: 4rem;
     font-weight: 700;
 }
+.volly h4 {
+    margin-top:10px;
+    display: flex;
+    font-size: 3rem;
+}
 .volly h2 {
-    margin-top: 20px;
+    margin-top:20px;
     display: flex;
     font-size: 3rem;
 }
@@ -363,7 +368,7 @@ figure{
     font-weight: 600;
     transition: .5s ease;
     margin-top: 1.5rem;
-    margin-left: 3.5rem;
+    margin-left: 3rem;
 }
 .tampilan-volly img:hover {
     box-shadow: none;
@@ -401,14 +406,14 @@ figure{
 figure{
     position: relative;
     left: 0;
-    width: 400%; /* width dikali slide */
-    animation: 10s slide infinite;
+    width: 600%; /* width dikali slide */
+    animation: 15s slide-doc infinite;
 }
 
 .slide-doc{
     margin-top: 1rem;
     position: relative;
-    width: 25%; /* width dibagi slide */
+    width: 16.66%; /* width dibagi slide */
     float: left;
 }
 
@@ -460,6 +465,25 @@ figure{
     1000%{
         left:0;
     }
+}
+
+.foto-kabid img {
+    margin-top: -5rem;
+    border-radius: 15rem;
+    align-items: center;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.5rem;
+    color: #fff;
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+    margin-top: 1.5rem;
+    margin-left: 3rem;
+}
+.foto-kabid h1 {
+    margin-top:20px;
+    display: flex;
+    font-size: 3rem;
 }
 
   /* BREAKSPOINT */
