--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ section {
     box-shadow: none;
 }
 
+
 .home-content h3 {
     font-size: 3.5rem;
     font-weight: 700;
@@ -162,6 +163,13 @@ span {
     text-align: left;
     line-height: 1.2;
     color: var(--text-color);
+}
+.about-content h2 {
+    margin-top: 1rem;
+    margin-bottom: .5rem;
+    text-align: center;
+    font-size: 2rem;
+    line-height: 1.2;
 }
 .about-content p {
     color: var(--text-color);
@@ -344,6 +352,65 @@ span {
     }
 }
 
+.berita-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 2.5rem;
+}
+.berita-container .berita-box {
+    position: relative;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem var(--bg-color);
+    overflow: hidden;
+    display: flex;
+}
+.berita-box img {
+    width: 100%;
+    transition: .5s ease;
+}
+.berita-box:hover img {
+    transform: scale(1.1);
+}
+.berita-box .berita-layer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 4rem;
+    transform: translateY(100%);
+    transition: .5s ease;
+}
+.berita-box:hover .berita-layer {
+    transform: translateY(0);
+}
+.berita-layer h4 {
+    font-size: 3rem;
+}
+.berita-layer p {
+    font-size: 1.5rem;
+    margin: .3rem 0 1rem;
+}
+.berita-layer a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    background: var(--text-color);
+    border-radius: 50%;
+}
+.berita-layer a i {
+    font-size: 2rem;
+    color: var(--second-bg-color);
+}
 
 .volly h1 {
     margin-top: 10px;
