--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,34 @@ section {
 .btn:hover {
     box-shadow: none;
 }
+.btn-tentang {
+    margin-top: 10px;
+    padding: 1rem 2rem;
+    background: var(--main-color);
+    border-radius: 5rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.5rem;
+    color: #fff;
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+    display: inline-block; /* menambahkan display inline-block */
+    min-width: 200px; /* menambahkan min-width untuk memastikan cukup lebar */
+    text-align: center; /* untuk center align teks */
+    margin-right: 20px; /* sesuaikan margin jika diperlukan */
+    margin-bottom: 20px; /* sesuaikan margin jika diperlukan */
+    line-height: 1; /* sesuaikan line-height jika diperlukan */
+}
+
+.btn-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; /* sesuaikan jarak antar tombol */
+}
+
+.btn-tentang:hover {
+    box-shadow: none;
+}
 
 
 .home-content h3 {
@@ -301,11 +329,60 @@ span {
     width: 25%; /* width dibagi slide */
     float: left;
 }
+.fig-pelantikan{
+    position: relative;
+    left: 0;
+    width: 1000%; /* width dikali slide */
+    animation: 30s slide-pelantikan infinite;
+}
+
+.slide-pelantikan{
+    margin-top: 7rem;
+    position: relative;
+    width: 10%; /* width dibagi slide */
+    float: left;
+}
 
 .slide img {
     width: 100%;
     /* height: 500px; */
 }
+@keyframes slide-pelantikan {
+    0% {
+        transform: translateX(0);
+    }
+    10% {
+        transform: translateX(-10%);
+    }
+    20% {
+        transform: translateX(-20%);
+    }
+    30% {
+        transform: translateX(-30%);
+    }
+    40% {
+        transform: translateX(-40%);
+    }
+    50% {
+        transform: translateX(-50%);
+    }
+    60% {
+        transform: translateX(-60%);
+    }
+    70% {
+        transform: translateX(-70%);
+    }
+    80% {
+        transform: translateX(-80%);
+    }
+    90% {
+        transform: translateX(-90%);
+    }
+    100% {
+        transform: translateX(-100%); /* Geser hingga 50% untuk menampilkan gambar ke-10 */
+    }
+}
+
 
 @keyframes slide{
     0%{
@@ -392,10 +469,10 @@ span {
     transform: translateY(0);
 }
 .berita-layer h4 {
-    font-size: 3rem;
+    font-size: 2rem;
 }
 .berita-layer p {
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin: .3rem 0 1rem;
 }
 .berita-layer a {
