--- a/css/style.css
+++ b/css/style.css
@@ -1,397 +1,731 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+@import url('https://font.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  border: none;
-  outline: none;
-  scroll-behavior: smooth;
-  font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+    font-family: 'Poppins', sans-serif;
 }
 
 :root {
-  --bg-color: #000000;
-  --second-bg-color: #585858;
-  --text-color: #fff;
-  --main-color: rgb(255, 0, 0);
+    --bg-color: #770e0e;
+    --second-bg-color: #323946;
+    --text-color: #fff;
+    --main-color: #3946ff;
 }
 
 html {
-  font-size: 62.5%;
-  overflow-x: hidden;
+    font-size: 62.5%;
+    overflow-x: hidden;
 }
 
 body {
-  background: var(--bg-color);
-  color: var(--text-color);
+    background-image: url("Background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: var(--text-color);
 }
 
 section {
-  min-height: 100vh;
-  padding: 10rem 9% 2rem;
+    min-height: 100vh;
+    padding: 10rem 9% 2rem;
 }
 
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 2rem 9%;
-  background: var(--bg-color);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 100;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 2rem 9%;
+    background-image: url("Background.png");
+    background-repeat: no-repeat;
+    background-size:  cover;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
 }
 
 .header.sticky {
-  border-bottom: 0.1rem solid rgba(202, 202, 202, 0.2);
+    border-bottom: .1rem solid rgba(0, 0, 0, .2);
 }
 
 .logo {
-  font-size: 2.5rem;
-  color: var(--text-color);
-  font-weight: 600;
-  cursor: default;
+    font-size: 2.5rem;
+    color: var(--text-color);
+    font-weight: 600;
+    cursor: default;
 }
 
 .navbar a {
-  font-size: 1.7rem;
-  color: var(--text-color);
-  margin-left: 4rem;
-  transition: 0.3s;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    margin-left: 1rem;
+    transition: 0.3s;
 }
 
 .navbar a:hover,
 .navbar a.active {
-  color: var(--main-color);
+    color: var(--main-color);
 }
 
 #menu-icon {
-  font-size: 3.5rem;
-  color: var(--text-color);
-  display: none;
+    font-size: 3.5rem;
+    color: var(--text-color);
+    display: none;
 }
 
 .home {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
-.home-content h3 {
-  font-size: 3.5rem;
-  font-weight: 700;
-}
-
-.home-content h3:nth-of-type(2) {
-  margin-bottom: 2rem;
-}
-
-span {
-  color: var(--main-color);
-}
-
-.home-content h1 {
-  font-size: 5.5rem;
-  font-weight: 700;
-  line-height: 1.2;
-}
-
-.home-content p {
-  font-size: 1.5rem;
-}
-
-table {
-  border-collapse: collapse;
-  width: 100%;
-}
-
-table,
-th,
-td {
-  border: 1px solid white;
-}
-
-th,
-td {
-  font-size: 2rem;
-  font-weight: 500;
-  padding: 10px;
-}
-
-th {
-  background-color: rgb(255, 0, 0);
-  color: #fff;
-}
-.txt-hdr {
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-  font-size: 2rem;
-  font-weight: 700;
-  line-height: 1.2;
+.home-img {
+    float: left;
+    margin-left: 10px;
 }
 
 .btn {
-  margin-top: 3rem;
-  margin-left: 2rem;
-  display: inline-block;
-  padding: 1rem 2.8rem;
-  background: var(--main-color);
-  border-radius: 4rem;
-  box-shadow: 0 0 1rem;
-  font-size: 1.5rem;
-  color: var(--text-color);
-  letter-spacing: 0.1rem;
-  font-weight: 600;
-  transition: 0.5s ease;
+    float: right;
+    padding: 1rem 2rem;
+    background: var(--main-color);
+    border-radius: 5rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.5rem;
+    color: #fff;
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
 
 .btn:hover {
-  box-shadow: none;
+    box-shadow: none;
+}
+.btn-tentang {
+    margin-top: 10px;
+    padding: 1rem 2rem;
+    background: var(--main-color);
+    border-radius: 5rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.5rem;
+    color: #fff;
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+    display: inline-block; /* menambahkan display inline-block */
+    min-width: 200px; /* menambahkan min-width untuk memastikan cukup lebar */
+    text-align: center; /* untuk center align teks */
+    margin-right: 20px; /* sesuaikan margin jika diperlukan */
+    margin-bottom: 20px; /* sesuaikan margin jika diperlukan */
+    line-height: 1; /* sesuaikan line-height jika diperlukan */
 }
 
-tr i {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 3rem;
-  height: 3rem;
-  background: transparent;
-  border: 0.2rem solid var(--main-color);
-  border-radius: 50%;
-  font-size: 2.5rem;
-  color: var(--main-color);
-}
-tr i:hover {
-  background: var(--main-color);
-  color: white;
-  box-shadow: 0 0 1rem;
+.btn-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; /* sesuaikan jarak antar tombol */
 }
 
-* {
-  box-sizing: border-box;
-}
-.mySlides {
-  display: none;
-}
-img {
-  vertical-align: middle;
+.btn-tentang:hover {
+    box-shadow: none;
 }
 
-/* Kontainer Slideshow */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+
+.home-content h3 {
+    font-size: 3.5rem;
+    font-weight: 700;
+}
+span {
+    color: #ff0000;
+}
+.home-content h1 {
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 1;
 }
 
-/* Tombol Next & Previous */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: rgb(255, 1, 1);
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.5s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+.social-media a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 4rem;
+    height: 4rem;
+    background-color: transparent;
+    border: .2rem solid #ff0000;
+    border-radius: 50%;
+    font-size: 2rem;
+    color: #ff0000;
+    margin: 3rem 1.5rem 3rem 0;
+    transition: .5s ease;
 }
 
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+.social-media a:hover {
+    background: #003cff ;
+    color: #fff;
+    box-shadow: 0 0 1.5rem var(--main-color);
 }
 
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+.about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
 
-/* Efek Fade */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
+.about-img {
+    width: 35vw;
 }
 
-@-webkit-keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
+.heading {
+    text-align: center;
+    font-size: 4.5rem;
 }
 
-@keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
+.about-content h1 {
+    text-align: left;
+    line-height: 1.2;
+    color: var(--text-color);
+}
+.about-content h2 {
+    margin-top: 1rem;
+    margin-bottom: .5rem;
+    text-align: center;
+    font-size: 2rem;
+    line-height: 1.2;
+}
+.about-content p {
+    color: var(--text-color);
+    font-size: 1.5rem;
 }
 
-.footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 2rem 9%;
-  background: var(--second-bg-color);
+.vismis h2 {
+    margin-top: 1rem;
+    font-size: 2rem;
+    font-weight: 700;
 }
 
-.footer-text p {
-  font-size: 1.5rem;
+.vismis p {
+    font-size: 1.5rem;
+    line-height: 1;
+    margin-top: .5rem;
+    line-height: 1;
+    letter-spacing: .1rem;
 }
 
-.footer-iconTop a {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0.8rem;
-  background: var(--main-color);
-  border-radius: 0.8rem;
+
+.team-content {
+    width: 100%;
+    max-width: 1350px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, auto));
+    align-items: center;
+    gap: 2rem;
+    text-align: center;
+    margin-top: 4rem;
 }
 
-.footer-iconTop a:hover {
-  box-shadow: 0 0 1rem var(--main-color);
+.team-content img {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+    margin-bottom: 15px;
+}
+.box {
+    padding: 5px;
+    border: 1px solid rgba(255, 255, 255, .3);
+    background: rgba(0, 0, 0, .2);
+    border-radius: 15px;
+    box-shadow: 0 4px rgba(0, 0, 0, .1);
+    backdrop-filter: blur(5px);
+    transition: all .38s ease;
+}
+.box:hover{
+    transform: translateY(-10px);
+    cursor: pointer;
+}
+.box h2 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: -10px;
+}
+.box p {
+    font-size: 10px;
+    font-weight: 600;
+    margin-top: 1rem;
+}
+.icon a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+    height: 3rem;
+    background-color: transparent;
+    border: .2rem solid #008cff;
+    border-radius: 50%;
+    font-size: 2rem;
+    color: #008cff;
+    margin: 3rem 1.5rem 3rem 0;
+    transition: .5s ease;
+}
+.icon a:hover {
+    background: #ffffff ;
+    color: #000000;
+    box-shadow: 0 0 1.5rem var(--main-color);
 }
 
-.footer-iconTop a i {
-  font-size: 1.5rem;
-  color: var(--second-bg-color);
+
+.page_404{ padding:40px 0; background:#fff; font-family: 'Arvo', serif;
 }
 
-.bank p {
-  font-size: 1.5rem;
-  font-weight: 700;
-  line-height: 1.2;
-  background: #ffffff9d;
-  color: #ffffff;
+.page_404  img{ width:100%;}
+
+.four_zero_four_bg{
+ 
+ background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+    height: 400px;
+    background-position: center;
+ }
+ 
+ 
+ .four_zero_four_bg h1{
+ font-size:80px;
+ }
+ 
+  .four_zero_four_bg h3{
+       font-size:80px;
+       }
+       
+       .link_404{      
+  color: #fff!important;
+    padding: 10px 20px;
+    background: #39ac31;
+    margin: 20px 0;
+    display: inline-block;}
+  .contant_box_404{ margin-top:-50px;}
+
+  .slider{
+    width: 100%;
+    /* height: 500px; */
+    overflow: hidden;
 }
 
-.bank img {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+.fig{
+    position: relative;
+    left: 0;
+    width: 400%; /* width dikali slide */
+    animation: 10s slide infinite;
 }
 
-/* File CSS Swiper */
-.container {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.slide{
+    margin-top: 7rem;
+    position: relative;
+    width: 25%; /* width dibagi slide */
+    float: left;
+}
+.fig-pelantikan{
+    position: relative;
+    left: 0;
+    width: 1000%; /* width dikali slide */
+    animation: 30s slide-pelantikan infinite;
 }
 
-.swiper {
-  width: 80%;
-  height: fit-content;
+.slide-pelantikan{
+    margin-top: 7rem;
+    position: relative;
+    width: 10%; /* width dibagi slide */
+    float: left;
 }
 
-.swiper-slide img {
-  width: 100%;
-  padding: 2.5rem;
+.slide img {
+    width: 100%;
+    /* height: 500px; */
+}
+@keyframes slide-pelantikan {
+    0% {
+        transform: translateX(0);
+    }
+    10% {
+        transform: translateX(-10%);
+    }
+    20% {
+        transform: translateX(-20%);
+    }
+    30% {
+        transform: translateX(-30%);
+    }
+    40% {
+        transform: translateX(-40%);
+    }
+    50% {
+        transform: translateX(-50%);
+    }
+    60% {
+        transform: translateX(-60%);
+    }
+    70% {
+        transform: translateX(-70%);
+    }
+    80% {
+        transform: translateX(-80%);
+    }
+    90% {
+        transform: translateX(-90%);
+    }
+    100% {
+        transform: translateX(-100%); /* Geser hingga 50% untuk menampilkan gambar ke-10 */
+    }
 }
 
-.swiper .swiper-button-prev,
-.swiper .swiper-button-next {
-  color: #ff0000;
-  size: 0.2rem;
-}
-.swiper .swiper-pagination-bullet-active {
-  background: red;
+
+@keyframes slide{
+    0%{
+        left:0;
+    }
+    10%{
+        left:0;
+    }
+    20%{
+        left:-100%;
+    }
+    30%{
+        left:-100%;
+    }
+    40%{
+        left:-200%;
+    }
+    50%{
+        left:-200%;
+    }
+    55%{
+        left:-300%;
+    }
+    65%{
+        left:-300%;
+    }
+    66%{
+        left:-200%;
+    }
+    74%{
+        left:-200%;
+    }
+    75%{
+        left:-100%;
+    }
+    85%{
+        left:-100%;
+    }
+    90%{
+        left:0;
+    }
+    1000%{
+        left:0;
+    }
 }
 
-/* BREAKSPOINT */
-@media (max-width: 1200px) {
-  html {
-    font-size: 55%;
-  }
+.berita-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 2.5rem;
 }
-
-@media (max-width: 991px) {
-  .header {
-    padding: 2rem 3%;
-  }
-  section {
-    padding: 10rem 3% 2rem;
-  }
+.berita-container .berita-box {
+    position: relative;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem var(--bg-color);
+    overflow: hidden;
+    display: flex;
 }
-@media (max-width: 768px) {
-  #menu-icon {
-    display: block;
-  }
-
-  .navbar {
+.berita-box img {
+    width: 100%;
+    transition: .5s ease;
+}
+.berita-box:hover img {
+    transform: scale(1.1);
+}
+.berita-box .berita-layer {
     position: absolute;
-    top: 100%;
+    bottom: 0;
     left: 0;
     width: 100%;
-    padding: 1rem 3%;
-    background: var(--bg-color);
-    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-    display: none;
-  }
-
-  .navbar.active {
-    display: block;
-  }
-
-  .navbar a {
-    display: block;
-    font-size: 2rem;
-    margin: 3rem 0;
-  }
-
-  .home {
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-  }
-  .home-content h3 {
-    font-size: 2.5rem;
-  }
-
-  .home-content h1 {
-    font-size: 5rem;
-  }
-
-  .home-img img {
-    width: 70wv;
-    margin-top: 4rem;
-  }
-
-  .about {
-    flex-direction: column-reverse;
-  }
-
-  .about img {
-    width: 70vw;
-    margin-top: 1rem;
-  }
+    text-align: center;
+    padding: 0 4rem;
+    transform: translateY(100%);
+    transition: .5s ease;
+}
+.berita-box:hover .berita-layer {
+    transform: translateY(0);
+}
+.berita-layer h4 {
+    font-size: 2rem;
+}
+.berita-layer p {
+    font-size: 1rem;
+    margin: .3rem 0 1rem;
+}
+.berita-layer a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    background: var(--text-color);
+    border-radius: 50%;
+}
+.berita-layer a i {
+    font-size: 2rem;
+    color: var(--second-bg-color);
 }
 
-@media (max-width: 450px) {
-  html {
-    font-size: 50%;
+.volly h1 {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
+    font-weight: 700;
+}
+.volly h4 {
+    margin-top:10px;
+    display: flex;
+    font-size: 3rem;
+}
+.volly h2 {
+    margin-top:20px;
+    display: flex;
+    font-size: 3rem;
+}
+
+.volly h3 {
+    margin-top: 1rem;
+    display: flex;
+    font-size: 2rem;
+}
+.volly p {
+    margin-top: .5rem;
+    display: flex;
+    font-size: 1.6rem;
+    margin-bottom: 1rem;
+}
+.tampilan-volly img {
+    align-items: center;
+    border-radius: 5rem;
+    box-shadow: 0 0 2.5rem var(--main-color);
+    font-size: 1.5rem;
+    color: #fff;
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+    margin-top: 1.5rem;
+    margin-left: 3rem;
+}
+.tampilan-volly img:hover {
+    box-shadow: none;
+}
+
+.tampilan-volly h5 {
+    display: flex;
+    align-items: center;
+    float: right;
+    padding: 1rem 1.5rem;
+    background: var(--main-color);
+    border-radius: 5rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.5rem;
+    color: #fff;
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+    margin-top: 20px;
+    margin-right: 30px;
+    cursor: pointer;
+
+}
+.tampilan-volly h5:hover {
+    box-shadow: none;
+}
+  /* slideshow foto dokumentasi */
+  
+  .slider-doc{
+    width: 100%;
+    /* height: 500px; */
+    overflow: hidden;
+}
+
+figure{
+    position: relative;
+    left: 0;
+    width: 600%; /* width dikali slide */
+    animation: 15s slide-doc infinite;
+}
+
+.slide-doc{
+    margin-top: 1rem;
+    position: relative;
+    width: 16.66%; /* width dibagi slide */
+    float: left;
+}
+
+.slide-doc img {
+    width: 100%;
+    /* height: 500px; */
+}
+
+@keyframes slide-doc{
+    0%{
+        left:0;
+    }
+    10%{
+        left:0;
+    }
+    20%{
+        left:-100%;
+    }
+    30%{
+        left:-100%;
+    }
+    40%{
+        left:-200%;
+    }
+    50%{
+        left:-200%;
+    }
+    55%{
+        left:-300%;
+    }
+    65%{
+        left:-300%;
+    }
+    66%{
+        left:-200%;
+    }
+    74%{
+        left:-200%;
+    }
+    75%{
+        left:-100%;
+    }
+    85%{
+        left:-100%;
+    }
+    90%{
+        left:0;
+    }
+    1000%{
+        left:0;
+    }
+}
+
+.foto-kabid img {
+    margin-top: -5rem;
+    border-radius: 15rem;
+    align-items: center;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.5rem;
+    color: #fff;
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+    margin-top: 1.5rem;
+    margin-left: 3rem;
+}
+.foto-kabid h1 {
+    margin-top:20px;
+    display: flex;
+    font-size: 3rem;
+}
+
+  /* BREAKSPOINT */
+  @media (max-width: 1200px) {
+    html {
+        font-size: 55%;
+    }
   }
 
-  @media (max-width: 365px) {
-    .home-img img {
-      width: 90vw;
+  @media (max-width: 991px) {
+    .header {
+        padding: 2rem 3%;
     }
-    .about-img img {
-      width: 90vw;
+    section {
+        padding: 10rem 3% 2rem;
     }
   }
+    @media (max-width: 768px) {
+        #menu-icon {
+            display: block;
+        }
+
+        .navbar {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            padding: 1rem 3%;
+            background-image: url(Background.png);
+            border-top: .1rem solid rgba(0, 0, 0, .2);
+            box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+            display: none;
+        }
+
+        .navbar.active {
+            display: block;
+        }
+
+        .navbar a {
+            display: block;
+            font-size: 2rem;
+            margin: 3rem 0;
+        }
+
+.home {
+    flex-direction: column;
+}
+.home-content h3 {
+    font-size: 2.5rem;
+}
+
+.home-content h1 {
+    font-size: 5rem;
+}
+
+.home-img img {
+    width: 70wv;
+    margin-top: 4rem;
+}
+
+.about {
+    flex-direction: column-reverse;
+}
+
+.about img {
+    width: 70vw;
+    margin-top: 1rem;
+}
+    }
+  
+    @media (max-width: 450px) {
+        html {
+            font-size: 50%;
+        }
+
+        @media (max-width: 365px) {
+            .home-img img {
+                width: 90vw;
+            }
+            .about-img img {
+                width: 90vw;
+            }
+   }
 }
